--- a/package.json
+++ b/package.json
@@ -1,8 +1,25 @@
 {
+  "scripts": {
+    "start": "webpack serve --open",
+    "build": "webpack"
+  },
   "dependencies": {
-    "feather-icons": "^4.29.2"
+    "feather-icons": "^4.29.2",
+    "style-loader": "^4.0.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.12"
+    "autoprefixer": "^10.4.20",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.3",
+    "mini-css-extract-plugin": "^2.9.2",
+    "postcss-loader": "^8.1.1",
+    "tailwindcss": "^3.4.16",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.7.2",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.2.0"
   }
 }
