--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "webpack"
   },
   "dependencies": {
+    "chart.js": "^4.4.7",
     "feather-icons": "^4.29.2",
     "style-loader": "^4.0.0"
   },
