feat: Sistema de cotação de economia anual
- rager funcional com a tabela e o gráfico
- gráfico movido e conectado aos dados da tabela
- biblioteca chartjs-plugin-datalabels adicionado ao projeto (data labels no grafico)

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "feather-icons": "^4.29.2",
     "style-loader": "^4.0.0"
   },
