--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
     "feather-icons": "^4.29.2",
+    "json-server": "^1.0.0-beta.3",
     "style-loader": "^4.0.0"
   },
   "devDependencies": {
