--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "webpack"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
     "feather-icons": "^4.29.2",
