--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
     "cors": "^2.8.5",
+    "emailjs-com": "^3.2.0",
     "express": "^4.21.2",
     "feather-icons": "^4.29.2",
     "fs": "^0.0.1-security",
