--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start:api": "json-server --watch db/db.json --port 4000"
   },
   "dependencies": {
-    "chart.js": "^4.4.7",
+    "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "emailjs-com": "^3.2.0",
     "feather-icons": "^4.29.2",
@@ -13,27 +13,28 @@
     "style-loader": "^4.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "copy-webpack-plugin": "^12.0.2",
+    "@tailwindcss/postcss": "^4.1.11",
+    "autoprefixer": "^10.4.21",
+    "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
-    "css-minimizer-webpack-plugin": "^7.0.0",
+    "css-minimizer-webpack-plugin": "^7.0.2",
     "file-loader": "^6.2.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
-    "image-minimizer-webpack-plugin": "^4.1.1",
+    "image-minimizer-webpack-plugin": "^4.1.3",
     "image-webpack-loader": "^8.1.0",
-    "imagemin": "^9.0.0",
+    "imagemin": "^9.0.1",
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-pngquant": "^10.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
-    "mini-css-extract-plugin": "^2.9.2",
+    "mini-css-extract-plugin": "^2.9.4",
     "postcss-loader": "^8.1.1",
-    "tailwindcss": "^3.4.16",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.7.2",
+    "tailwindcss": "^3.4.17",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.9.2",
     "webp-loader": "^0.6.0",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.2.0"
+    "webpack": "^5.101.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   }
 }
